实现了 Admin info 和 log out 功能
