# controller/admin_login.go
@@ -1,12 +1,16 @@
 package controller
 
 import (
+	"encoding/json"
 	"github.com/JunxiHe459/gateway/dao"
 	"github.com/JunxiHe459/gateway/dto"
 	"github.com/JunxiHe459/gateway/global"
 	"github.com/JunxiHe459/gateway/middleware"
+	"github.com/JunxiHe459/gateway/public"
+	"github.com/gin-gonic/contrib/sessions"
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"time"
 )
 
 type AdminLoginController struct {
@@ -15,18 +19,19 @@ type AdminLoginController struct {
 func RegiterAdminLogin(group *gin.RouterGroup) {
 	admin := &AdminLoginController{}
 	group.POST("/login", admin.AdminLogin)
+	group.GET("/logout", admin.AdminLogout)
 }
 
 // AdminLogin godoc
 // @Summary Admin Login
 // @Description Admin Login 接口
-// @Tags 管理员登陆接口
+// @Tags 管理员接口
 // @ID /admin/login
 // @Accept json
 // @Produce json
 // @Param body body dto.AdminLoginInput true "body"
-// @Sucess 200 {object{ middleware.Response{data=dto.AdminLoginOutput} "success"
-// @Router /admin/login [post]
+// @Sucess 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
+// @Router /admin/login [POST]
 func (adminLogin *AdminLoginController) AdminLogin(c *gin.Context) {
 	params := &dto.AdminLoginInput{}
 	err := params.BindParam(c)
@@ -48,6 +53,40 @@ func (adminLogin *AdminLoginController) AdminLogin(c *gin.Context) {
 		return
 	}
 
+	// 设置 session
+	adminSession := &dto.AdminSessionInfo{
+		ID:        admin.Id,
+		UsernName: params.Username,
+		LoginTime: time.Now(),
+	}
+	adminSessionBinary, err := json.Marshal(adminSession)
+	if err != nil {
+		print("LoginAndCheck json marshal failed: ", err.Error())
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+	s := sessions.Default(c)
+	s.Set(public.AdminSessionInfoKey, string(adminSessionBinary))
+	// 存到 redis 里面
+	_ = s.Save()
+
 	middleware.ResponseSuccess(c, &dto.AdminLoginOutput{Token: params.Username})
 	return
+}
+
+// AdminLogout godoc
+// @Summary Admin Log out
+// @Description Admin Log out 接口
+// @Tags 管理员接口
+// @ID /admin/logout
+// @Accept json
+// @Produce json
+// @Sucess 200 {object} middleware.Response{data=string} "success"
+// @Router /admin/logout [GET]
+func (admin *AdminLoginController) AdminLogout(c *gin.Context) {
+	s := sessions.Default(c)
+	s.Delete(public.AdminSessionInfoKey)
+	_ = s.Save()
+
+	middleware.ResponseSuccess(c, "Log out!")
 }
