# docs/swagger.json
@@ -4,6 +4,22 @@
         "contact": {}
     },
     "paths": {
+        "/admin/info": {
+            "get": {
+                "description": "Admin Login 接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "管理员登陆接口"
+                ],
+                "summary": "Admin Login",
+                "operationId": "/admin/info"
+            }
+        },
         "/admin/login": {
             "post": {
                 "description": "Admin Login 接口",
@@ -29,6 +45,22 @@
                         }
                     }
                 ]
+            }
+        },
+        "/admin/logout": {
+            "get": {
+                "description": "Admin Log out 接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "管理员退出接口"
+                ],
+                "summary": "Admin Log out",
+                "operationId": "/admin/logout"
             }
         }
     },
